--- a/rapport2.tex
+++ b/rapport2.tex
@@ -1,6 +1,6 @@
-\documentclass[a4paper,12pt,final]{article}
+%\documentclass[a4paper,12pt,final]{article}
 % Pour une impression recto verso, utilisez plutôt ce documentclass :
-%\documentclass[a4paper,11pt,twoside,final]{article}
+\documentclass[a4paper,12pt,twoside,final]{article}
 
 \usepackage[english,francais]{babel}
 \usepackage[utf8]{inputenc}
