--- a/references.tex
+++ b/references.tex
@@ -1,9 +1,12 @@
 \phantomsection\addcontentsline{toc}{section}{Références}
 \begin{thebibliography}{ABC}	
-    \bibitem[1]{bwt} Michael Burrows et D. J. Wheeler, (10th May 1994) \emph{A block-sorting lossless data compression algorithm}, Digital SRC Research Report 124.
-    \bibitem[2]{petri} Matthias Petri, (July 2013) \emph{Scalable succinct indexing for large text collections}.
-    \bibitem[3]{sarray} Okanohara,D. and Sadakane,K. (2006) \emph{Practical entropy-compressed rank/select dictionary}, CoRR abs/cs/0610001.
-    \bibitem[4]{fmindex} Paolo Ferragina et Giovanni Manzini, (2000) \emph{Opportunistic Data Structures with Applications}, Proceedings of the 41st Annual Symposium on Foundations of Computer Science. p.390.
+	\bibitem[1]{wt} R. Grossi, A. Gupta, and J. S. Vitter, (January 2003) \emph{High-order entropy-compressed text indexes}, Proceedings of the 14th Annual SIAM/ACM Symposium on Discrete Algorithms (SODA), 841-850.
+    \bibitem[2]{bwt} Michael Burrows et D. J. Wheeler, (10th May 1994) \emph{A block-sorting lossless data compression algorithm}, Digital SRC Research Report 124.
+    \bibitem[3]{petri} Matthias Petri, (July 2013) \emph{Scalable succinct indexing for large text collections}.
+    \bibitem[4]{sarray} D. Okanohara et K. Sadakane, (2006) \emph{Practical entropy-compressed rank/select dictionary}, CoRR abs/cs/0610001.
+    \bibitem[5]{fmindex} Paolo Ferragina et Giovanni Manzini, (2000) \emph{Opportunistic Data Structures with Applications}, Proceedings of the 41st Annual Symposium on Foundations of Computer Science. p.390.
+
+
 %    \bibitem[2]{fmindex} Michael Burrows, D. J. Wheeler \emph{A block-sorting lossless data compression algorithm}, 10th May 1994, Digital SRC Research Report 124.
 %    \bibitem[a]{tutoltx} tutoriel \LaTeX{} \emph{http://www.ukonline.be/programmation/latex/tutoriel/index.php}
 %    \bibitem[b]{expltx} exemple de rapport de stage en \LaTeX{} \emph{http://blog.hikoweb.net/index.php?/post2011/11/06/Exemple-de-rapport-en-LaTeX}
