--- a/contexte.tex
+++ b/contexte.tex
@@ -22,10 +22,9 @@ La méthode de Sanger consiste à répliquer un brin d'ADN dans un milieu où se
 \begin{figure}[!ht]
     \center
     \includegraphics[]{./images/chromato_acanthoweb.jpg}
-    \caption{Exemple de chromatographie | Source : ancanthoweb}
+    \caption{Exemple de chromatographie | Source : ancanthoweb.fr}
     \label{chromato}
 \end{figure}
-
 
 
 \subsubsection{Séquençage haut débit}
