--- a/intro.tex
+++ b/intro.tex
@@ -1,17 +1,9 @@
-\section*{Introduction} % Pas de numérotation
-\addcontentsline{toc}{section}{Introduction} % Ajout dans la table des matières
+\section*{Résumé} % Pas de numérotation
+\addcontentsline{toc}{section}{Résumé} % Ajout dans la table des matières
 
-Le séquençage de l'ADN est depuis plus de 20 ans un sujet important de la bio-informatique, avec de applications aussi bien en biologie fondamentale qu'en médecine. Qu'il serve à étudier l'évolution ou des maladies, la demande est de plus en plus importante.
+Le séquençage de l'ADN est depuis plus de 20 ans un sujet important de la bio-informatique, avec des applications en biologie fondamentale comme en médecine. Aussi bien pour étudier l'évolution ou des maladies, la demande est de plus en plus importante. De plus, depuis l'émergence des techniques de séquençage haut débit, la masse de données biologiques a augmenté plus vite que l'efficacité des algorithmes existants. Le besoin d'améliorer ces algorithmes est donc de plus en plus pressant, à chaque étape du traitement et de l'analyse de ces données. La compression et l'indexation des reads, fragments d'ADN retournés par les séquenceurs, est notamment un sujet pour lequel le besoin de nouvelles méthodes est important, du fait de la taille grandissante de ces données.
 
-De plus, depuis l'émergence des techniques de séquençage haut débit, la masse de données biologiques a augmenté plus vite que les algorithmes existants ne sont capables de les traiter. Le besoin d'améliorer ces algorithmes est donc de plus en plus pressant, à chaque étape du traitement et de l'analyse de ces données.
-
-La compression et l'indexation des reads, fragments d'ADN retournés par les séquenceurs, est notamment un sujet pour lequel le besoin de nouvelles méthodes est important, du fait de la taille grandissante de ces données.
-
-Beaucoup d'algorithmes sur la compression de données existent déjà, et sont utilisés pour stocker des données biologiques. 
-
-Le travail présenté ici porte donc sur l'étude de l'un de ces algorithmes, \textit{la transformée de Burrows-Wheeler à contexte borné}, et son amélioration pour ce type de données particulier que sont les reads.
-
-Ce travail a été réalisé au cours du stage de fin de licence informatique à Lille 1, dans l'équipe de bio-informatique Bonsai.
+Beaucoup d'algorithmes sur la compression de données existent déjà, et sont utilisés pour stocker des données biologiques. Le travail présenté ici porte donc sur l'étude de l'un de ces algorithmes, \textit{la transformée de Burrows-Wheeler à contexte borné}, et son amélioration pour ce type de données particulier que sont les reads. Ce travail a été réalisé au cours du stage de fin de licence informatique à Lille 1, dans l'équipe de bio-informatique Bonsai.
 
 %Dans le cadre de ma troisième année de licence informatique, j'ai effectué un stage de recherche à l'Inria. Du 30 mars au 30 juin, dans l'équipe Bonsai, j'ai travaillé sur l'algorithmique du texte appliquée à la bio-informatique.
 
