--- a/rapport2.tex
+++ b/rapport2.tex
@@ -13,6 +13,8 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{qtree}
+\usepackage{array}
+\usepackage{multirow}
 
 \newcommand\rmq[2][green!50!black]{\marginpar{\hspace*{-0.5em}\begin{minipage}{0.25\textwidth}\scriptsize\if\empty#1\empty\else\color{#1}\fi
       #2
@@ -47,7 +49,6 @@
   \include{remerciements}
   \cleardoublepage
   \include{intro}
-  \cleardoublepage
   \include{contexte}
   \cleardoublepage
   \include{stage}
