--- a/remerciements.tex
+++ b/remerciements.tex
@@ -3,14 +3,14 @@
 
 Je tiens à remercier toutes les personnes qui m'ont aidées pendant ce stage et à la rédaction de ce rapport.
 
-Tout d'abord, je voudrais remercier mes maîtres de stage Rayan Chikhi et Mikael Salson pour m'avoir aider et guider tout au long de ce stage, ainsi que toute l'équipe Bonsai pour m'avoir chaleureusement accueillie en son sein.
+En particulier, je voudrais remercier mes maîtres de stage Rayan Chikhi et Mikael Salson pour m'avoir aidée et guidée tout au long de ce stage, ainsi que toute l'équipe Bonsai pour m'avoir chaleureusement accueillie en son sein.
 
-Enfin, je tiens à remercier \LaTeX{} et les tutoriels sur internet\,\footnotemark{} pour l'aide apportée à la construction de ce rapport.
+Je voudrais aussi remercier mes amis et ma famille qui m'ont aidé pour la rédaction de ce rapport.
 
 
-\footnotetext{
-http://www.ukonline.be/programmation/latex/tutoriel/index.php et \\
-http://blog.hikoweb.net/index.php?/post2011/11/06/Exemple-de-rapport-en-LaTeX}
+%\footnotetext{
+%http://www.ukonline.be/programmation/latex/tutoriel/index.php et \\
+%http://blog.hikoweb.net/index.php?/post2011/11/06/Exemple-de-rapport-en-LaTeX}
 
 
 %\uparrow\cite{tutoltx}\cite{expltx}}
